fixed horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,6 @@ html,
 body {
   min-height: 100%
 }
+
+
+* { box-sizing: border-box; } 
